data/derived/sp14/progs/unify/prog0730.ml.out
Characters 369-373:
  let (_, res) = List.fold_left f base args in
                                  ^^^^
Error: This expression has type 'a list
       but an expression was expected of type int * int list
